--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,52 +1,29 @@
 <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <section class="form-block">
-
-    <label>Register</label>
+    <label class="title">Register</label>
     <div class="form-group">
-        <label for="email">Email:</label>
-        <label for="email"
-            aria-haspopup="true"
-            role="tooltip"
-            class="tooltip tooltip-validation tooltip-sm"
-            [class.invalid]="formErrors.email">
-            <input id="email" type="text"
-                formControlName="email">
-            <span class="tooltip-content">
-                {{ formErrors.email }}
-            </span>
+        <label for="email" aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-sm" [class.invalid]="formErrors.email">
+            <input id="email" type="text" placeholder="Email" formControlName="email">
+            <span class="tooltip-content"> {{ formErrors.email }} </span>
         </label>
     </div>
 
     <div class="form-group">
-        <label for="password">Password:</label>
-        <label for="password"
-            aria-haspopup="true"
-            role="tooltip"
-            class="tooltip tooltip-validation tooltip-sm"
-            [class.invalid]="formErrors.password">
-            <input id="password" type="password"
-                formControlName="password">
-            <span class="tooltip-content">
-                {{ formErrors.password }}
-            </span>
+        <label for="password" aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-sm" [class.invalid]="formErrors.password">
+            <input id="password" type="password" placeholder="Password" formControlName="password">
+            <span class="tooltip-content"> {{ formErrors.password }} </span>
         </label>
     </div>
 
     <div class="form-group">
-        <label for="rePassword">Repeat password:</label>
-        <label for="rePassword"
-            aria-haspopup="true"
-            role="tooltip"
-            class="tooltip tooltip-validation tooltip-sm"
-            [class.invalid]="formErrors.rePassword">
-            <input id="password" type="password"
-                formControlName="rePassword">
-            <span class="tooltip-content">
-                {{ formErrors.rePassword }}
-            </span>
+        <label for="rePassword" aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-sm" [class.invalid]="formErrors.rePassword">
+            <input id="password" type="password" placeholder="Repeat password" formControlName="rePassword">
+            <span class="tooltip-content"> {{ formErrors.rePassword }} </span>
         </label>
     </div>
 
     <button class="btn btn-primary" [disabled]="!registerForm.valid" type="submit" id="register-button">Register</button>
-  </section>
+    <span class="bottom-link">
+        <a routerLink="/login" class="signup">Already have an accout? Login</a>
+    </span>
+
 </form>
