--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -58,4 +58,9 @@ form{
             font-size: 14px;
         }
     }
+
+    .error{
+        font-size: 12px;
+        color: $color-warning-orange;
+    }
 }
