--- a/src/consts/colors.scss
+++ b/src/consts/colors.scss
@@ -8,3 +8,5 @@ $color-light-gray-2: #ededed;
 $color-light-gray-3: #dddddd;
 $color-dark-gray-1: #b7b7b7;
 $color-dark-gray-2: #7c7c7c;
+
+$color-warning-orange: #ff5421;
