--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,18 @@
-<p>
-  login works!
-</p>
+<div class="login-wrapper">
+  <form class="login" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <label class="title">
+          Login to your account
+      </label>
+      <div class="login-group">
+          <input class="username" type="text" id="username" placeholder="Username" formControlName="username">
+          <input class="password" type="password" id="password" placeholder="Password" formControlName="password">
+          <div class="error active" *ngIf="loginFailed">
+              Invalid user name or password
+          </div>
+          <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary">Login</button>
+          <span>
+              <a routerLink="/register" class="signup">Register with email</a>
+          </span>
+      </div>
+  </form>
+</div>
