--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,20 @@
-<p>
-  dashboard works!
-</p>
+<aside>
+  <div class="nav-profile">
+    <p>Random user</p>
+  </div>
+  <a *ngFor="let item of items" [routerLink]="['/dashboard', item.link]" routerLinkActive="active">
+      <i class="material-icons">{{item.icon}}</i><p>{{item.name}}</p>
+  </a>
+
+
+  <div class="button-wrapper">
+    <button class="logout">
+      Logout
+      <i class="material-icons">exit_to_app</i>
+    </button>
+  </div>
+
+</aside>
+
+<router-outlet>
+</router-outlet>
