--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <aside>
   <div class="nav-profile">
-    <p>Random user</p>
+    <p>{{user.email}}</p>
   </div>
   <a *ngFor="let item of items" [routerLink]="['/dashboard', item.link]" routerLinkActive="active">
       <i class="material-icons">{{item.icon}}</i><p>{{item.name}}</p>
