- Changed login/register structure

--- a/src/app/welcome/login/login.component.html
+++ b/src/app/welcome/login/login.component.html
@@ -11,7 +11,7 @@
           </div>
           <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary">Login</button>
           <span>
-              <a routerLink="/register" class="signup">Register with email</a>
+              <a routerLink="/welcome/register" class="signup">Register with email</a>
           </span>
       </div>
   </form>
