- Added alert bar for registration communication

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,7 @@
+<div class="alert-bar {{alertType}}">
+    {{alertMessage}}
+</div>
+
 <div class="router-wrapper">
     <router-outlet>
     </router-outlet>
