--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,5 +1,4 @@
 .alert-bar {
-    background-color: #99cc33;
     color: white;
     height: 30px;
     left: 0;
@@ -8,6 +7,8 @@
     text-align: center;
     top: 0;
     width: 100%;
+    display: flex;
+    justify-content: center;
 
     &.failure {
         background-color: #cc3300;
@@ -20,6 +21,10 @@
     &.none {
         display: none;
     }
+}
+
+i {
+    margin-right: 10px;
 }
 
 .router-wrapper {
