--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,8 @@
+<div class="alert-bar {{alertType}}">
+    <i class="material-icons">{{icon}}</i>
+    {{alertMessage}}
+</div>
+
 <div class="router-wrapper">
     <router-outlet>
     </router-outlet>
