--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
 
 
   <div class="button-wrapper">
-    <button class="logout" (click)="logout()">
+    <button class="logout logout-button" (click)="logout()">
       Logout
       <i class="material-icons">exit_to_app</i>
     </button>
