--- a/src/app/dashboard/map/map.component.html
+++ b/src/app/dashboard/map/map.component.html
@@ -1,3 +1,16 @@
-<p>
-  map works!
-</p>
+<div class="wrapper">
+  <agm-map [latitude]="centerLocation.lat" [longitude]="centerLocation.lon">
+    <agm-marker *ngFor="let position of positions" [latitude]="position.lat" [longitude]="position.lon"></agm-marker>
+    <app-sebm-google-map-directions [origin]="origin" [destination]="destination"></app-sebm-google-map-directions>
+  </agm-map>
+
+  <div class="map-menu">
+    <button class="menu-button">Create route to current position</button>
+    <button class="menu-button">Do something fancy</button>
+    Select device activity timeframe:
+    <select name="datasets-select" id="datasets-select">
+      <option *ngFor="let dataset of datasets" value="dataset">{{dataset.name}}</option>
+    </select>
+  </div>
+</div>
+
