- Register device + list

--- a/src/app/dashboard/devices/devices.component.html
+++ b/src/app/dashboard/devices/devices.component.html
@@ -1,3 +1,2 @@
-<p>
-  devices works!
-</p>
+<app-register-device (emitEvent)="emitEvent($event)" ></app-register-device>
+<app-device-list [message]="message"></app-device-list>
