--- a/src/app/dashboard/devices/device-list/device-list.component.html
+++ b/src/app/dashboard/devices/device-list/device-list.component.html
@@ -1,4 +1,4 @@
 {{message}}
 <ul>
-  <li *ngFor="let device of devices">{{device.imei}}</li>
+  <li *ngFor="let device of devices">{{device.device_id}}</li>
 </ul>
