--- a/src/consts/colors.scss
+++ b/src/consts/colors.scss
@@ -2,6 +2,7 @@ $color-main-blue: #3c4b5a;
 $color-main-blue-light: #dfefff;
 $color-main-gray: #e2e2e2;
 $color-main-white: #fff;
+$color-detail-blue: #13d4ff;
 
 
 $color-light-gray-1: #f2f2f2;
