--- a/src/consts/button.scss
+++ b/src/consts/button.scss
@@ -29,13 +29,12 @@
 
 .round-button {
     @extend .my-button;
-    border-radius: 100px;
     background-color: white;
-    border: 1px solid rgba($color: #000000, $alpha: 0.2);
-    color: rgba($color: #000000, $alpha: 0.9);
+    border: 1px solid rgba($color: #000, $alpha: 0.2);
+    color: rgba($color: #000, $alpha: 0.9);
     &:hover {
-        background-color: darken(white, 3%);
-        color: rgba($color: #000000, $alpha: 0.9);
+        background-color: darken(#fff, 3%);
+        color: rgba($color: #000, $alpha: 0.9);
         transition: background-color 0.1s;
     }
 }
