--- a/src/app/dashboard/devices/register-device/register-device.component.html
+++ b/src/app/dashboard/devices/register-device/register-device.component.html
@@ -1,5 +1,8 @@
 <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <label class="title">Register new device</label>
+    <label class="title">
+        <i class="material-icons">add_circle_outline</i>  
+        Register new device
+    </label>
     <div class="form-group">
         <label for="imei" [class.invalid]="formErrors.imei">
             <input id="imei" type="text" placeholder="IMEI" size="20" formControlName="imei">
