- triangles: little fixes

--- a/src/app/welcome/background.scss
+++ b/src/app/welcome/background.scss
@@ -43,19 +43,19 @@
 @-moz-keyframes spin-flip-2 {
     0% { -moz-transform: rotate(90deg); }
     50% { -moz-transform: rotate(360deg); }
-    90% { -moz-transform: rotate(90deg); }
+    100% { -moz-transform: rotate(90deg); }
 }
 
 @-webkit-keyframes spin-flip-2 {
     0% { -webkit-transform: rotate(90deg); }
     50% { -webkit-transform: rotate(360deg); }
-    90% { -webkit-transform: rotate(90deg); }
+    100% { -webkit-transform: rotate(90deg); }
 }
 
 @keyframes spin-flip-2 {
     0% {transform:rotate(90deg);}
     50% {transform:rotate(360deg);}
-    90% {transform:rotate(90deg);}
+    100% {transform:rotate(90deg);}
 }
 
 .welcome-background{
@@ -63,7 +63,8 @@
     height: 100vh;
     padding-top: 200px;
     box-sizing: border-box;
-    background: linear-gradient(to bottom right, #0ebece, #013a96);
+    background: linear-gradient(to bottom right, #0acfe0, #002664);
+    overflow: hidden;
 }
 
 .triangle {
