- created alert service for location change

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,5 +16,9 @@
 
 </aside>
 
-<router-outlet>
-</router-outlet>
+<div class="wrapper">
+  <app-alert>
+  </app-alert>
+  <router-outlet>
+  </router-outlet>
+</div>
