--- a/src/app/dashboard/devices/devices.component.html
+++ b/src/app/dashboard/devices/devices.component.html
@@ -1,2 +1,4 @@
-<app-register-device (emitEvent)="emitEvent($event)" ></app-register-device>
-<app-device-list [message]="message"></app-device-list>
+<div class="wrapper">
+    <app-register-device (emitEvent)="emitEvent($event)" ></app-register-device>
+    <app-device-list [message]="message"></app-device-list>
+</div>
