--- a/src/app/dashboard/devices/devices.component.scss
+++ b/src/app/dashboard/devices/devices.component.scss
@@ -1,3 +1,85 @@
+@import '../../../consts/colors';
+
+form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.title{
+    margin-right: 50px;
+    display: flex;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: row;
+    
+    label {
+        display: flex;
+        flex-direction: column;
+        margin-right: 20px;
+    }
+
+    input{
+        overflow: hidden;
+        padding: 7px;
+        width: 200px;
+    }
+ 
+}
+
+span {
+    font-size: 12px;
+    color: $color-warning-orange;
+} 
+
+button{
+    height: 20px;
+}
+table {
+    margin-top: 20px;
+    width: 100%;
+
+    background: #fff;
+    border-collapse: collapse;
+    
+}
+
+thead {
+    background: $color-detail-blue;
+}
+
+th {
+    padding: 15px;
+    text-align: left;
+
+    color: #D5DDE5;
+    background: $color-main-blue;
+    border-bottom: 4px solid lighten($color-main-blue, 20%);
+    border-right:  1px solid lighten($color-main-blue, 10%);
+    font-size: 15px;
+    font-weight: 100;
+    text-align: left;
+}
+
+tr {
+  color: #666B85;
+  font-size: 16px;
+  font-weight: normal;
+  text-shadow:  0 1px 1px rgba(256, 256, 256, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+td {
+    background: #FFFFFF;
+    padding: 10px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 14px;
+  }
+
 :host {
     width: 100%;
     box-sizing: border-box;
