--- a/src/app/dashboard/devices/devices.component.html
+++ b/src/app/dashboard/devices/devices.component.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </td>
-        <td>2017/05/24 22:31</td>
+        <td>{{device.date_created}}</td>
         <td>2017/11/10 19:26</td>
         </tr>
     </tbody>
