--- a/src/app/dashboard/map/map.component.html
+++ b/src/app/dashboard/map/map.component.html
@@ -1,4 +1,41 @@
 <div class="wrapper">
+  <aside class="map-submenu">
+      <div *ngIf="devices.length>0" class="device-menu">
+          <div class="description">
+              Select device and activity timeframe:
+          </div>
+          
+          <div class="my-select device-select">
+              <select [ngModel]="selectedDevice" name="devices-select" id="devices-select" (ngModelChange)="selectDevice($event)">
+                  <option *ngFor="let device of devices" [ngValue]="device">{{device.deviceId}}</option>
+              </select>
+          </div>
+    
+          <div *ngIf="selectedDevice.gpsData.length>0" class="my-select data-select">
+            <select [ngModel]="selectedActivity" name="activity-select" id="activity-select" (ngModelChange)="selectActivity($event)">
+              <option *ngFor="let activity of selectedDevice.gpsData" [ngValue]="activity">
+                {{formatDate(activity.wakeupTime)}}
+              </option>
+            </select>
+          </div>
+        
+          <div *ngIf="selectedDevice.gpsData.length===0">
+            No data for this device
+          </div>
+        </div>
+    
+        <p *ngIf="devices.length === 0">
+          No devices linked to your account;
+        </p>
+    
+        <div class="button-column">
+            <button class="menu-button round-button" (click)="createRoute()" [disabled]="!selectedActivity">Create route to current position</button>
+            <button class="menu-button round-button" (click)="triggerRoute()">Turn on/off route</button>
+        </div>
+
+  </aside>
+
+
   <agm-map [latitude]="centerLocation.lat" [longitude]="centerLocation.lon">
     <div *ngIf="selectedActivity">
         <agm-marker *ngFor="let coord of selectedActivity.coords" [latitude]="coord.lat" [longitude]="coord.lon"></agm-marker>
@@ -11,9 +48,7 @@
     <app-sebm-google-map-directions #cdire=mapdirection *ngIf="routeFlag" [origin]="origin" [destination]="destination"></app-sebm-google-map-directions>
   </app-map-google> -->
 
-  <div class="map-menu">
- 
-  
+  <!-- <div class="map-menu">
     <div *ngIf="devices.length>0" class="device-menu">
       <div class="description">
           Select device activity timeframe:
@@ -42,10 +77,8 @@
     <div class="button-row">
         <button class="menu-button round-button" (click)="createRoute()" [disabled]="!selectedActivity">Create route to current position</button>
         <button class="menu-button round-button" (click)="triggerRoute()">Turn on/off route</button>
-      </div>
+    </div>
+  </div> -->
 
-
-
-  </div>
 </div>
 
