--- a/src/app/dashboard/map/map.component.html
+++ b/src/app/dashboard/map/map.component.html
@@ -7,7 +7,7 @@
           
           <div class="my-select device-select">
               <select [ngModel]="selectedDevice" name="devices-select" id="devices-select" (ngModelChange)="selectDevice($event)">
-                  <option *ngFor="let device of devices" [ngValue]="device">{{device.deviceId}}</option>
+                  <option *ngFor="let device of devices" [ngValue]="device">{{device.name}}</option>
               </select>
           </div>
     
