--- a/src/app/dashboard/devices/devices.component.html
+++ b/src/app/dashboard/devices/devices.component.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
         </td>
-        <td>{{device.date_created}}</td>
-        <td>2017/11/10 19:26</td>
+        <td>{{getDateRegistered(device)}}</td>
+        <td>{{getLastLocationDate(device)}}</td>
         </tr>
     </tbody>
     </table>
